# discovery-network

./: .gitignore  Cargo.toml  Makefile  README.adoc
java/: .gitignore  Makefile  build.gradle  gradle.properties  settings.gradle
java/discovery-network/: build.gradle
java/discovery-network/src/main/java/io/muoncore/discovery/jna/: HelloJvm.java  NativeDiscovery.java
java/discovery-network/src/main/java/io/muoncore/discovery/network/: NetworkDiscovery.java  NetworkDiscoveryFactory.java
java/gradle/wrapper/: gradle-wrapper.properties
java/lib/: build.gradle
java/src/main/java/io/muoncore/discovery/jna/: HelloJvm.java  NativeDiscovery.java
node/: Makefile  index.js  package.json
src/: bin.rs  discovery.rs  lib.rs  server.rs  test_disco.rs
src/discovery/: mod.rs  udphandler.rs
tests/: int.rs
