[package]
name = "muon-discovery-net"
version = "0.1.0"
authors = ["David Dawson <me@daviddawson.me>"]

[dependencies]
libc = "0.2"
net2 = "0.2.27"
mio = "0.6.6"
log = "0.3.6"
env_logger = "0.4.0"
bytes      = "0.3.0"

[lib]
name = "muon_discovery_net"
crate-type = ["dylib"]

[[bin]]
name = "mybin"
path = "src/bin.rs"
